--- a/nym-node-status-api/nym-node-status-agent/Cargo.toml
+++ b/nym-node-status-api/nym-node-status-agent/Cargo.toml
@@ -3,7 +3,7 @@
 
 [package]
 name = "nym-node-status-agent"
-version = "1.0.7"
+version = "1.0.8-gw-socks5"
 authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
