--- a/common/ecash-signer-check/Cargo.toml
+++ b/common/ecash-signer-check/Cargo.toml
@@ -14,6 +14,7 @@ readme.workspace = true
 futures = { workspace = true }
 thiserror = { workspace = true }
 semver = { workspace = true }
+serde = { workspace = true }
 tokio = { workspace = true, features = ["time"] }
 tracing = { workspace = true }
 url = { workspace = true }
